2.about add about section

--- a/index.html
+++ b/index.html
@@ -13,41 +13,76 @@
 <body>
     <div class="page-wrapper">
         <header class="header">
-                <div class="header__heading">
-                    <div class="logo">
-                        <a href="javascript: void(0);">
-                            <img class="logo-image" src="images/svg/img-logo-desktop-light.svg" alt="">
-                        </a>
-                    </div>
-                    <nav class="header__nav">
-                        <a href="javascript: void(0);" title="" class="header__menu-link">About</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Projects</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Services</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Our team</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Events</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Contacts</a>
-                    </nav>
-                    <div class="header__lang-list">
-                        <input id="No" type="radio" name="radio">
-                        <label for="No">No</label>
-                        <input id="En" type="radio" name="radio" checked>
-                        <label for="En">En</label>
-                        <input id="Ru" type="radio" name="radio" >
-                        <label for="Ru">Ru</label>
-                    </div>
+            <div class="header__heading">
+                <div class="logo">
+                    <a href="javascript: void(0);">
+                        <img class="logo-image" src="images/svg/img-logo-desktop-light.svg" alt="">
+                    </a>
                 </div>
-                <div class="header__main-content">
-                    <h1 class="header__title">We provide digital services
-                        and develop our own products in sports and iHealth industry</h1>
-                    <p class="header__description">
-                        We put technology and sport together to create the world's most efficient
-                        <br>and popular sports apps.
-                    </p>
+                <nav class="header__nav">
+                    <a href="javascript: void(0);" title="" class="header__menu-link">About</a>
+                    <a href="javascript: void(0);" title="" class="header__menu-link">Projects</a>
+                    <a href="javascript: void(0);" title="" class="header__menu-link">Services</a>
+                    <a href="javascript: void(0);" title="" class="header__menu-link">Our team</a>
+                    <a href="javascript: void(0);" title="" class="header__menu-link">Events</a>
+                    <a href="javascript: void(0);" title="" class="header__menu-link">Contacts</a>
+                </nav>
+                <div class="header__lang-list">
+                    <input id="No" type="radio" name="radio">
+                    <label for="No">No</label>
+                    <input id="En" type="radio" name="radio" checked>
+                    <label for="En">En</label>
+                    <input id="Ru" type="radio" name="radio">
+                    <label for="Ru">Ru</label>
                 </div>
-                <div class="header__link">
-                    <a href="javascript: void(0);" class="header__link-item">Drop us a line</a>
-                </div>
+            </div>
+            <div class="header__main-content">
+                <h1 class="header__title">We provide digital services
+                    and develop our own products in sports and iHealth industry</h1>
+                <p class="header__description">
+                    We put technology and sport together to create the world's most efficient
+                    <br>and popular sports apps.
+                </p>
+            </div>
+            <div class="header__link">
+                <a href="javascript: void(0);" class="header__link-item">Drop us a line</a>
+            </div>
         </header>
+        <section class="about">
+            <h2 class="about__title">We combine high level of professionalism and <br> individual approach</h2>
+            <p class="about__description">We have subject domain expertise in various aspects</p>
+            <div class="about__items">
+                <div class="about__item">
+                    <div class="about__icon"></div>
+                    <p class="about__text">Project management for simple and complex projects</p>
+                </div>
+                <div class="about__item">
+                    <div class="about__icon"></div>
+                    <p class="about__text">Management for hire</p>
+                </div>
+                <div class="about__item">
+                    <div class="about__icon"></div>
+                    <p class="about__text">Digital transformation</p>
+                </div>
+            </div>
+            <div class="about__activity">
+                <h3 class="about__subtitle">What We Do</h3>
+                <div class="about__container">
+                    <ul class="about__list">
+                        <li class="about__point">Development and support of new and existing software systems</li>
+                        <li class="about__point">Deep analytics in various spheres</li>
+                        <li class="about__point">Insights-driven solutions </li>
+                        <li class="about__point">Agile product engineering</li>
+                    </ul>
+                    <ul class="about__list">
+                        <li class="about__point">Quality Assurance for new and existing products</li>
+                        <li class="about__point">Data collection, research and analysis</li>
+                        <li class="about__point">UX/UI concepts and design</li>
+                        <li class="about__point">Video and motion design</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
