3.our_work add work section

--- a/index.html
+++ b/index.html
@@ -48,41 +48,89 @@
                 <a href="javascript: void(0);" class="header__link-item">Drop us a line</a>
             </div>
         </header>
-        <section class="about">
-            <h2 class="about__title">We combine high level of professionalism and <br> individual approach</h2>
-            <p class="about__description">We have subject domain expertise in various aspects</p>
-            <div class="about__items">
-                <div class="about__item">
-                    <div class="about__icon"></div>
-                    <p class="about__text">Project management for simple and complex projects</p>
+        <main class="main">
+            <section class="about">
+                <h2 class="about__title">We combine high level of professionalism and <br> individual approach</h2>
+                <p class="about__description">We have subject domain expertise in various aspects</p>
+                <div class="about__items">
+                    <div class="about__item">
+                        <div class="about__icon"></div>
+                        <p class="about__text">Project management for simple and complex projects</p>
+                    </div>
+                    <div class="about__item">
+                        <div class="about__icon"></div>
+                        <p class="about__text">Management for hire</p>
+                    </div>
+                    <div class="about__item">
+                        <div class="about__icon"></div>
+                        <p class="about__text">Digital transformation</p>
+                    </div>
                 </div>
-                <div class="about__item">
-                    <div class="about__icon"></div>
-                    <p class="about__text">Management for hire</p>
+                <div class="about__activity">
+                    <h3 class="about__subtitle">What We Do</h3>
+                    <div class="about__container">
+                        <ul class="about__list">
+                            <li class="about__point">Development and support of new and existing software systems</li>
+                            <li class="about__point">Deep analytics in various spheres</li>
+                            <li class="about__point">Insights-driven solutions </li>
+                            <li class="about__point">Agile product engineering</li>
+                        </ul>
+                        <ul class="about__list">
+                            <li class="about__point">Quality Assurance for new and existing products</li>
+                            <li class="about__point">Data collection, research and analysis</li>
+                            <li class="about__point">UX/UI concepts and design</li>
+                            <li class="about__point">Video and motion design</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="about__item">
-                    <div class="about__icon"></div>
-                    <p class="about__text">Digital transformation</p>
+            </section>
+            <section class="work">
+                <header class="work__heading">
+                    <h2 class="work__title">Our Work</h2>
+                    <p class="work__title-desc">We change the way businesses and industries operate.</p>
+                </header>
+                <div class="work__main-content">
+                    <div class="work__item">
+                        <h3 class="work__subtitle">BirdieEyes</h3>
+                        <p class="work__description">We have introduced AR technology into one of the most
+                            traditional games and made it even more interesting</p>
+                    </div>
                 </div>
-            </div>
-            <div class="about__activity">
-                <h3 class="about__subtitle">What We Do</h3>
-                <div class="about__container">
-                    <ul class="about__list">
-                        <li class="about__point">Development and support of new and existing software systems</li>
-                        <li class="about__point">Deep analytics in various spheres</li>
-                        <li class="about__point">Insights-driven solutions </li>
-                        <li class="about__point">Agile product engineering</li>
-                    </ul>
-                    <ul class="about__list">
-                        <li class="about__point">Quality Assurance for new and existing products</li>
-                        <li class="about__point">Data collection, research and analysis</li>
-                        <li class="about__point">UX/UI concepts and design</li>
-                        <li class="about__point">Video and motion design</li>
-                    </ul>
+                <div class="work__cards">
+                    <article class="work__card">
+                        <figure class="work__image">
+                            <img src="images/jpg_png/img-upsport.jpg" title="" alt="">
+                        </figure>
+                        <h3 class="work__article-title">UpSport</h3>
+                        <p class="work__article-description">Live communication platform that has changed the game for
+                            sport clubs, parents and their kids</p>
+                    </article>
+                    <article class="work__card">
+                        <figure class="work__image">
+                            <img src="images/jpg_png/img-xland.jpg" title="" alt="">
+                        </figure>
+                        <h3 class="work__article-title">XLand</h3>
+                        <p class="work__article-description">Digital presence for the first indoor activity park in
+                            Norway</p>
+                    </article>
+                    <article class="work__card">
+                        <figure class="work__image">
+                            <img src="images/jpg_png/img-phonero.jpg" title="" alt="">
+                        </figure>
+                        <h3 class="work__article-title">phonero</h3>
+                        <p class="work__article-description">Interfaces for the cloud based switchboard applications as
+                            well as various desktop and mobile applications</p>
+                    </article>
+                    <article class="work__card">
+                        <figure class="work__image">
+                            <img src="images/jpg_png/img-kongsberg.jpg" title="" alt="">
+                        </figure>
+                        <h3 class="work__article-title">Kongsberg Group</h3>
+                        <p class="work__article-description">Groundbreaking defence and aerospace systems</p>
+                    </article>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
     </div>
 </body>
 
