4.team add work section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
                     </article>
                 </div>
             </section>
+            <section class="team">
+                <div class="team__main-content">
+                    <div class="team__card info-card">
+                        <h3 class="team__title title-card">our team</h3>
+                        <p class="team__description text-card">We are united by our passion to create unique and efficient digital
+                            products</p>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
