5.inside_frontbyte add section inside

--- a/index.html
+++ b/index.html
@@ -134,10 +134,36 @@
                 <div class="team__main-content">
                     <div class="team__card info-card">
                         <h3 class="team__title title-card">our team</h3>
-                        <p class="team__description text-card">We are united by our passion to create unique and efficient digital
+                        <p class="team__description text-card">We are united by our passion to create unique and
+                            efficient digital
                             products</p>
                     </div>
                 </div>
+            </section>
+            <section class="inside">
+                <header class="inside__heading heading-section">
+                    <h2 class="inside__title title-section">Inside Frontbyte</h2>
+                    <p class="inside__subtitle subtitle-section">We change the way businesses and industries
+                        operate.
+                    </p>
+                    <div class="inside__background">
+                        <img src="images/jpg_png/img-inside-press.jpg" title="" alt="">
+                    </div>
+                </header>
+                <article class="inside__card info-card">
+                    <h3 class="inside__title title-card">Press about us</h3>
+                    <p class="inside__description text-card">AR golf platform BirdieEyes raises $300 million at $2.7
+                        billion valuation</p>
+                    <div class="inside__logo">
+                    </div>
+                    <ul class="tabs">
+                        <li class="tab"><a href="javascript:void (0);"></a></li>
+                        <li class="tab"><a href="javascript:void (0);"></a></li>
+                        <li class="tab"><a href="javascript:void (0);"></a></li>
+                        <li class="tab"><a href="javascript:void (0);"></a></li>
+                        <li class="tab"><a href="javascript:void (0);"></a></li>
+                    </ul>
+                </article>
             </section>
         </main>
     </div>
