--- a/index.html
+++ b/index.html
@@ -165,6 +165,23 @@
                     </ul>
                 </article>
             </section>
+            <div class="news">
+                <h3 class="news-title title-card">Latest news</h3>
+                <div class="news__cards">
+                    <article class="news__article">
+                        <p class="description-card">How to use email marketing to connect with your users</p>
+                        <span class="news__date">Dec 19, 2018</span>
+                    </article>
+                    <article class="news__article">
+                        <p class="description-card">How to use email marketing to connect with your users</p>
+                        <span class="news__date">Dec 19, 2018</span>
+                    </article>
+                    <article class="news__article">
+                        <p class="description-card">How to use email marketing to connect with your users</p>
+                        <span class="news__date">Dec 19, 2018</span>
+                    </article>
+                </div>
+            </div>
         </main>
     </div>
 </body>
