--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <br>and popular sports apps.
                 </p>
             </div>
-            <div class="header__link">
+            <div class="header__link link-drop">
                 <a href="javascript: void(0);" class="header__link-item">Drop us a line</a>
             </div>
         </header>
@@ -183,6 +183,51 @@
                 </div>
             </div>
         </main>
+        <footer class="footer">
+            <div class="footer__wrapper">
+                <img src="images/svg/img-map.svg" title="" alt="" class="footer__background">
+                <div class="footer__heading heading-section">
+                    <h2 class="footer__title title-section">Contacts</h2>
+                    <div class="footer__social">
+                        <a href="javascript: void(0);" title="" class="footer__link"><img
+                                src="images/svg/ic-linkedin-white.svg" title="" alt=""></a>
+                        <a href="javascript: void(0);" title="" class="footer__link"><img
+                                src="images/svg/ic-facebook-white.svg" title="" alt=""></a>
+                        <a href="javascript: void(0);" title="" class="footer__link"><img
+                                src="images/svg/ic-instagram-white.svg" title="" alt=""></a>
+                    </div>
+                </div>
+                <p class="footer__description description-card">Our head office is located in Norway.
+                    Research and development center is located in Belarus.</p>
+                <div class="footer__cities">
+                    <div class="footer__city">
+                        <h3 class="footer__subtitle">Norway</h3>
+                        <p class="footer__contacts">
+                            Kristiansand <br>
+                            Vestre strandgate, 23, 4th and 6th floor N-4611 <br>
+                            <a href="mailto:contact@frontbyte.no" title="" class="email-link">contact@frontbyte.no</a>
+                            <br>
+                            <a href="tel:+47 416 36 983" title="" class="phone-link">+47 416 36 983</a>
+                        </p>
+                    </div>
+                    <div class="footer__city">
+                        <h3 class="footer__subtitle">Belarus</h3>
+                        <p class="footer__contacts">
+                            Minsk <br>
+                            Dombrovskaya str., 9, оffice 10.2.2 <br>
+                            <a href="mailto:contact@frontbyte.no" title="" class="email-link">contact@frontbyte.by</a>
+                            <br>
+                            <a href="tel:+47 416 36 983" title="" class="phone-link">+375 29 1393336</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__link-drop link-drop">
+                <a href="javascript: void(0);" title="" class="link-item">Drop us a line</a>
+                <span class="copyright">© 2008–2018 Frontbyte</span>
+            </div>
+            .
+        </footer>
     </div>
 </body>
 
