8.changes finished margin,padding on page

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </article>
                 </section>
                 <div class="news">
-                    <h3 class="news-title title-card">Latest news</h3>
+                    <h3 class="news-title">Latest news</h3>
                     <div class="news__cards">
                         <article class="news__article">
                             <p class="description-card">How to use email marketing to connect with your users</p>
