8.changes fix margin and padding

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="page-wrapper">
         <div class="wrapper">
             <header class="header">
+                <div class="header__background-wrapper">
+                    <img class="header__background-image" src="images/jpg_png/img-header.jpg" title="" alt="">
+                </div>
                 <div class="header__heading">
                     <div class="logo">
                         <a href="javascript: void(0);">
@@ -92,6 +95,9 @@
                         <p class="work__title-desc">We change the way businesses and industries operate.</p>
                     </header>
                     <div class="work__main-content">
+                        <div class="work__background-wrapper">
+                            <img class="work__background-image" src="images/jpg_png/vid-birdieeyes.jpg" title="" alt="">
+                        </div>
                         <div class="work__item">
                             <h3 class="work__subtitle">BirdieEyes</h3>
                             <p class="work__description">We have introduced AR technology into one of the most
@@ -136,6 +142,9 @@
                 </section>
                 <section class="team">
                     <div class="team__main-content">
+                        <div class="team__background-wrapper">
+                            <img class="team__background-image" src="images/jpg_png/img-team-home.jpg" title="" alt="">
+                        </div>
                         <div class="team__card info-card">
                             <h3 class="team__title title-card">our team</h3>
                             <p class="team__description text-card">We are united by our passion to create unique and
@@ -212,7 +221,7 @@
                                 <a href="mailto:contact@frontbyte.no" title=""
                                     class="email-link">contact@frontbyte.no</a>
                                 <br>
-                                <a href="tel:+47 416 36 983" title="" class="phone-link">+47 416 36 983</a>
+                                <a href="tel:+4741636983" title="" class="phone-link">+47 416 36 983</a>
                             </p>
                         </div>
                         <div class="footer__city">
@@ -223,7 +232,7 @@
                                 <a href="mailto:contact@frontbyte.no" title=""
                                     class="email-link">contact@frontbyte.by</a>
                                 <br>
-                                <a href="tel:+47 416 36 983" title="" class="phone-link">+375 29 1393336</a>
+                                <a href="tel:+4741636983" title="" class="phone-link">+375 29 1393336</a>
                             </p>
                         </div>
                     </div>
