8.changes finished changes on page

--- a/index.html
+++ b/index.html
@@ -15,21 +15,29 @@
         <div class="wrapper">
             <header class="header">
                 <div class="header__background-wrapper">
-                    <img class="header__background-image" src="images/jpg_png/img-header.jpg" title="" alt="">
+                    <img class="header__background-image" src="images/jpg_png/img-header.jpg"
+                        title="Background image of header" alt="Background image of header">
                 </div>
                 <div class="header__heading">
                     <div class="logo">
                         <a href="javascript: void(0);">
-                            <img class="logo-image" src="images/svg/img-logo-desktop-light.svg" title="" alt="">
+                            <img class="logo-image" src="images/svg/img-logo-desktop-light.svg" title="Logo of company"
+                                alt="Logo of company">
                         </a>
                     </div>
                     <nav class="header__nav">
-                        <a href="javascript: void(0);" title="" class="header__menu-link">About</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Projects</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Services</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Our team</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Events</a>
-                        <a href="javascript: void(0);" title="" class="header__menu-link">Contacts</a>
+                        <a href="javascript: void(0);" title="Navigation link to `About`"
+                            class="header__menu-link">About</a>
+                        <a href="javascript: void(0);" title="Navigation link to `Projects`"
+                            class="header__menu-link">Projects</a>
+                        <a href="javascript: void(0);" title="Navigation link to `Services`"
+                            class="header__menu-link">Services</a>
+                        <a href="javascript: void(0);" title="Navigation link to `Our team`"
+                            class="header__menu-link">Our team</a>
+                        <a href="javascript: void(0);" title="Navigation link to `Events`"
+                            class="header__menu-link">Events</a>
+                        <a href="javascript: void(0);" title="Navigation link to `Contacts`"
+                            class="header__menu-link">Contacts</a>
                     </nav>
                     <div class="header__lang-list">
                         <input id="No" type="radio" name="radio">
@@ -49,7 +57,7 @@
                     </p>
                 </div>
                 <div class="header__link">
-                    <a href="javascript: void(0);" class="header__link-item">Drop us a line</a>
+                    <a href="javascript: void(0);" title="Link to drop" class="header__link-item">Drop us a line</a>
                 </div>
             </header>
             <main class="main">
@@ -96,7 +104,8 @@
                     </header>
                     <div class="work__main-content">
                         <div class="work__background-wrapper">
-                            <img class="work__background-image" src="images/jpg_png/vid-birdieeyes.jpg" title="" alt="">
+                            <img class="work__background-image" src="images/jpg_png/vid-birdieeyes.jpg"
+                                title="Image about our work" alt="Image about our work">
                         </div>
                         <div class="work__item">
                             <h3 class="work__subtitle">BirdieEyes</h3>
@@ -107,7 +116,9 @@
                     <div class="work__cards">
                         <article class="work__card">
                             <figure class="work__image">
-                                <img src="images/jpg_png/img-upsport.jpg" title="" alt="">
+                                <img src="images/jpg_png/img-upsport.jpg"
+                                    title="UpSport is platform has changed the game"
+                                    alt="UpSport is platform has changed the game">
                             </figure>
                             <h3 class="work__article-title">UpSport</h3>
                             <p class="work__article-description">Live communication platform that has changed the game
@@ -116,7 +127,7 @@
                         </article>
                         <article class="work__card">
                             <figure class="work__image">
-                                <img src="images/jpg_png/img-xland.jpg" title="" alt="">
+                                <img src="images/jpg_png/img-xland.jpg" title="XLand" alt="XLand">
                             </figure>
                             <h3 class="work__article-title">XLand</h3>
                             <p class="work__article-description">Digital presence for the first indoor activity park in
@@ -124,7 +135,8 @@
                         </article>
                         <article class="work__card">
                             <figure class="work__image">
-                                <img src="images/jpg_png/img-phonero.jpg" title="" alt="">
+                                <img src="images/jpg_png/img-phonero.jpg" title="phonero interfaces for the cloud apps"
+                                    alt="phonero interfaces for the cloud apps">
                             </figure>
                             <h3 class="work__article-title">phonero</h3>
                             <p class="work__article-description">Interfaces for the cloud based switchboard applications
@@ -133,7 +145,8 @@
                         </article>
                         <article class="work__card">
                             <figure class="work__image">
-                                <img src="images/jpg_png/img-kongsberg.jpg" title="" alt="">
+                                <img src="images/jpg_png/img-kongsberg.jpg" title="Kongsberg Group"
+                                    alt="Kongsberg Group">
                             </figure>
                             <h3 class="work__article-title">Kongsberg Group</h3>
                             <p class="work__article-description">Groundbreaking defence and aerospace systems</p>
@@ -143,38 +156,40 @@
                 <section class="team">
                     <div class="team__main-content">
                         <div class="team__background-wrapper">
-                            <img class="team__background-image" src="images/jpg_png/img-team-home.jpg" title="" alt="">
+                            <img class="team__background-image" src="images/jpg_png/img-team-home.jpg"
+                                title="Our Team Image" alt="Our Team Image">
                         </div>
-                        <div class="team__card info-card">
-                            <h3 class="team__title title-card">our team</h3>
-                            <p class="team__description text-card">We are united by our passion to create unique and
+                        <div class="team__card">
+                            <h3 class="team__title">our team</h3>
+                            <p class="team__description">We are united by our passion to create unique and
                                 efficient digital
                                 products</p>
                         </div>
                     </div>
                 </section>
                 <section class="inside">
-                    <header class="inside__heading heading-section">
-                        <h2 class="inside__title title-section">Inside Frontbyte</h2>
-                        <p class="inside__subtitle subtitle-section">We change the way businesses and industries
+                    <header class="inside__heading">
+                        <h2 class="inside__title">Inside Frontbyte</h2>
+                        <p class="inside__subtitle">We change the way businesses and industries
                             operate.
                         </p>
                         <div class="inside__background">
-                            <img src="images/jpg_png/img-inside-press.jpg" title="" alt="">
+                            <img src="images/jpg_png/img-inside-press.jpg" title="Press about us" alt="Press about us">
                         </div>
                     </header>
-                    <article class="inside__card info-card">
-                        <h3 class="inside__title title-card">Press about us</h3>
-                        <p class="inside__description text-card">AR golf platform BirdieEyes raises $300 million at $2.7
+                    <article class="inside__card">
+                        <h3 class="inside__card-title">Press about us</h3>
+                        <p class="inside__description">AR golf platform BirdieEyes raises $300 million at $2.7
                             billion valuation</p>
                         <div class="inside__logo">
+                            <img src="images/jpg_png/tc.jpg" title="" alt="">
                         </div>
                         <ul class="tabs">
-                            <li class="tab"><a href="javascript:void (0);"></a></li>
-                            <li class="tab"><a href="javascript:void (0);"></a></li>
-                            <li class="tab"><a href="javascript:void (0);"></a></li>
-                            <li class="tab"><a href="javascript:void (0);"></a></li>
-                            <li class="tab"><a href="javascript:void (0);"></a></li>
+                            <li class="tab"><a title="just static tab" href="javascript:void (0);"></a></li>
+                            <li class="tab"><a title="just static tab" href="javascript:void (0);"></a></li>
+                            <li class="tab"><a title="just static tab" href="javascript:void (0);"></a></li>
+                            <li class="tab"><a title="just static tab" href="javascript:void (0);"></a></li>
+                            <li class="tab"><a title="just static tab" href="javascript:void (0);"></a></li>
                         </ul>
                     </article>
                 </section>
@@ -198,19 +213,19 @@
             </main>
             <footer class="footer">
                 <div class="footer__wrapper">
-                    <img src="images/svg/img-map.svg" title="" alt="" class="footer__background">
-                    <div class="footer__heading heading-section">
-                        <h2 class="footer__title title-section">Contacts</h2>
+                    <img src="images/svg/img-map.svg" title="Map of the World" alt="Map of the World" class="footer__background">
+                    <div class="footer__heading">
+                        <h2 class="footer__title">Contacts</h2>
                         <div class="footer__social">
                             <a href="javascript: void(0);" title="" class="footer__link"><img
-                                    src="images/svg/ic-linkedin-white.svg" title="" alt=""></a>
+                                    src="images/svg/ic-linkedin-white.svg" title="LinkedIn icon" alt="LinkedIn icon"></a>
                             <a href="javascript: void(0);" title="" class="footer__link"><img
-                                    src="images/svg/ic-facebook-white.svg" title="" alt=""></a>
+                                    src="images/svg/ic-facebook-white.svg" title="Facebook icon" alt="Facebook icon"></a>
                             <a href="javascript: void(0);" title="" class="footer__link"><img
-                                    src="images/svg/ic-instagram-white.svg" title="" alt=""></a>
+                                    src="images/svg/ic-instagram-white.svg" title="Instagram icon" alt="Instagram icon"></a>
                         </div>
                     </div>
-                    <p class="footer__description description-card">Our head office is located in Norway.
+                    <p class="footer__description">Our head office is located in Norway.
                         Research and development center is located in Belarus.</p>
                     <div class="footer__cities">
                         <div class="footer__city">
@@ -218,10 +233,10 @@
                             <p class="footer__contacts">
                                 Kristiansand <br>
                                 Vestre strandgate, 23, 4th and 6th floor N-4611 <br>
-                                <a href="mailto:contact@frontbyte.no" title=""
+                                <a href="mailto:contact@frontbyte.no" title="email frontbyte's company for Norway"
                                     class="email-link">contact@frontbyte.no</a>
                                 <br>
-                                <a href="tel:+4741636983" title="" class="phone-link">+47 416 36 983</a>
+                                <a href="tel:+4741636983" title="phone frontbyte's company for Norway" class="phone-link">+47 416 36 983</a>
                             </p>
                         </div>
                         <div class="footer__city">
@@ -229,16 +244,16 @@
                             <p class="footer__contacts">
                                 Minsk <br>
                                 Dombrovskaya str., 9, оffice 10.2.2 <br>
-                                <a href="mailto:contact@frontbyte.no" title=""
+                                <a href="mailto:contact@frontbyte.no" title="email frontbyte's company for Belarus"
                                     class="email-link">contact@frontbyte.by</a>
                                 <br>
-                                <a href="tel:+4741636983" title="" class="phone-link">+375 29 1393336</a>
+                                <a href="tel:+4741636983" title="phone frontbyte's company for Belarus" class="phone-link">+375 29 1393336</a>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="footer__link-drop link-drop">
-                    <a href="javascript: void(0);" title="" class="link-item">Drop us a line</a>
+                    <a href="javascript: void(0);" title="Drop us" class="link-item">Drop us a line</a>
                     <span class="copyright">© 2008–2018 Frontbyte</span>
                 </div>
             </footer>
