--- a/index.html
+++ b/index.html
@@ -41,40 +41,38 @@
                     </div>
                 </div>
                 <div class="header__main-content">
-                    <h1 class="header__title">We&nbsp;provide digital services and develop our own products
+                    <h1 class="title header--title">We&nbsp;provide digital services and develop our own products
                         in&nbsp;sports and iHealth industry</h1>
-                    <p class="header__description cropped">
-                        We&nbsp;put technology and sport together to&nbsp;create the world&rsquo;s most efficient and
+                    <p class="medium-text header--description">
+                        We put technology and sport together to create the world&rsquo;s most efficient and
                         popular sports apps.
                     </p>
                 </div>
-                <div class="header__link">
-                    <a href="javascript: void(0);" title="" class="header__link-item">Drop us a line</a>
-                </div>
+                    <a href="javascript: void(0);" title="" class="medium-text header--link-item">Drop us a line</a>
             </header>
             <main class="main">
                 <section class="about">
-                    <h2 class="about__title">We combine high level of professionalism and individual approach
+                    <h2 class="title about--title">We combine high level of professionalism and individual approach
                     </h2>
-                    <p class="about__description">We have subject domain expertise in various aspects</p>
+                    <p class="subtitle-text about--description">We have subject domain expertise in various aspects</p>
                     <div class="about__items">
                         <div class="about__item">
-                            <div class="about__icon"></div>
+                            <div class="left-icon about--icon"></div>
                             <p class="about__text">Project management for simple and complex projects</p>
                         </div>
                         <div class="about__item">
-                            <div class="about__icon"></div>
+                            <div class="middle-icon about--icon"></div>
                             <p class="about__text">Management for hire</p>
                         </div>
                         <div class="about__item">
-                            <div class="about__icon"></div>
+                            <div class="right-icon about--icon"></div>
                             <p class="about__text">Digital transformation</p>
                         </div>
                     </div>
                     <div class="about__activity">
-                        <h3 class="about__subtitle">What We Do</h3>
+                        <h3 class="title about--subtitle">What We Do</h3>
                         <div class="about__container">
-                            <ul class="about__list">
+                            <ul class="medium-text about--list">
                                 <li class="about__point">Development and support of&nbsp;new and existing software
                                     systems
                                 </li>
@@ -82,7 +80,7 @@
                                 <li class="about__point">Insights-driven solutions </li>
                                 <li class="about__point">Agile product engineering</li>
                             </ul>
-                            <ul class="about__list">
+                            <ul class="medium-text about--list">
                                 <li class="about__point">Quality Assurance for new and existing products</li>
                                 <li class="about__point">Data collection, research and analysis</li>
                                 <li class="about__point">UX/UI concepts and design</li>
@@ -93,14 +91,14 @@
                 </section>
                 <section class="work">
                     <header class="work__heading">
-                        <h2 class="work__title">Our Work</h2>
-                        <p class="work__title-desc">We&nbsp;change the way businesses and industries operate.</p>
+                        <h2 class="title work--title">Our Work</h2>
+                        <p class="subtitle-text">We&nbsp;change the way businesses and industries operate.</p>
                     </header>
                     <div class="work__main-content">
                         <img class="work__background-image" src="images/content-images/vid-birdieeyes.jpg" alt="">
                         <div class="work__item">
                             <h3 class="work__subtitle">BirdieEyes</h3>
-                            <p class="work__description">We have introduced AR technology into one of the
+                            <p class="subtitle-text cropped">We have introduced AR technology into one of the
                                 most traditional games and made iteven more interesting</p>
                         </div>
                     </div>
@@ -109,7 +107,8 @@
                             <a href="javascript: void(0);" title="" class="work__link">
                                 <img class="work__image" src="images/content-images/img-upsport.jpg" alt="">
                                 <h3 class="work__article-title">UpSport</h3>
-                                <p class="work__article-description">Live communication platform that has changed the
+                                <p class="subtitle-text work--article-description">Live communication platform that has
+                                    changed the
                                     game
                                     for
                                     sport clubs, parents and their kids</p>
@@ -119,7 +118,8 @@
                             <a href="javascript: void(0);" title="" class="work__link">
                                 <img class="work__image" src="images/content-images/img-xland.jpg" alt="XLand">
                                 <h3 class="work__article-title">XLand</h3>
-                                <p class="work__article-description">Digital presence for the first indoor activity park
+                                <p class="subtitle-text work--article-description">Digital presence for the first indoor
+                                    activity park
                                     in&nbsp;Norway</p>
                             </a>
                         </article>
@@ -127,7 +127,8 @@
                             <a href="javascript: void(0);" title="" class="work__link">
                                 <img class="work__image" src="images/content-images/img-phonero.jpg" alt="">
                                 <h3 class="work__article-title">phonero</h3>
-                                <p class="work__article-description">Interfaces for the cloud based switchboard
+                                <p class="subtitle-text work--article-description">Interfaces for the cloud based
+                                    switchboard
                                     applications
                                     as
                                     well as various desktop and mobile applications</p>
@@ -137,24 +138,25 @@
                             <a href="javascript: void(0);" title="" class="work__link">
                                 <img class="work__image" src="images/content-images/img-kongsberg.jpg" alt="">
                                 <h3 class="work__article-title">Kongsberg Group</h3>
-                                <p class="work__article-description">Groundbreaking defence and aerospace systems</p>
+                                <p class="subtitle-text work--article-description">Groundbreaking defence and aerospace
+                                    systems</p>
                             </a>
                         </article>
                     </div>
                 </section>
-                    <div class="team__main-content">
-                        <img class="team__background-image" src="images/content-images/img-team-home.jpg" alt="">
-                        <div class="team__card">
-                            <h3 class="team__title">our team</h3>
-                            <p class="team__description">We are united by our passion to create unique and
-                                efficient digital
-                                products</p>
-                        </div>
+                <div class="team__main-content">
+                    <img class="team__background-image" src="images/content-images/img-team-home.jpg" alt="">
+                    <div class="team__card">
+                        <h3 class="team__title">our team</h3>
+                        <p class="subtitle-text cropped">We are united by our passion to create unique and
+                            efficient digital
+                            products</p>
                     </div>
+                </div>
                 <section class="inside">
                     <header class="inside__heading">
-                        <h2 class="inside__title">Inside Frontbyte</h2>
-                        <p class="inside__subtitle">We change the way businesses and industries
+                        <h2 class="title inside--title">Inside Frontbyte</h2>
+                        <p class="subtitle-text inside__subtitle">We change the way businesses and industries
                             operate.
                         </p>
                         <div class="inside__background">
@@ -163,10 +165,11 @@
                     </header>
                     <article class="inside__card">
                         <h3 class="inside__card-title">Press about us</h3>
-                        <p class="inside__description">AR golf platform BirdieEyes raises $300 million at $2.7
+                        <p class="subtitle-text cropped inside--description ">AR golf platform BirdieEyes raises $300 million at
+                            $2.7
                             billion valuation</p>
                         <div class="inside__logo">
-                            <img src="images/content-images/tc.jpg" alt="">
+                            <img src="images/svg/img-tc.svg" alt="">
                         </div>
                         <ul class="tabs">
                             <li class="tab tab--active"><a title="" href="javascript:void (0);"></a></li>
@@ -180,18 +183,18 @@
                 <article class="news">
                     <h3 class="news-title">Latest news</h3>
                     <div class="news__cards">
-                        <div class="news__article">
-                            <p class="description-card">How to use email marketing to connect with your users</p>
+                        <a class="news__article">
+                            <p class="medium-text description--card">How to use email marketing to connect with your users</p>
                             <span class="news__date">Dec 19, 2018</span>
-                        </div>
-                        <div class="news__article">
-                            <p class="description-card">How to use email marketing to connect with your users</p>
+                        </a>
+                        <a class="news__article">
+                            <p class="medium-text  description--card">How to use email marketing to connect with your users</p>
                             <span class="news__date">Dec 19, 2018</span>
-                        </div>
-                        <div class="news__article">
-                            <p class="description-card">How to use email marketing to connect with your users</p>
+                        </a>
+                        <a class="news__article">
+                            <p class="medium-text description--card">How to use email marketing to connect with your users</p>
                             <span class="news__date">Dec 19, 2018</span>
-                        </div>
+                        </a>
                     </div>
                 </article>
             </main>
@@ -199,7 +202,7 @@
                 <div class="footer__wrapper">
                     <img src="images/svg/img-map.svg" alt="" class="footer__background">
                     <div class="footer__heading">
-                        <h2 class="footer__title">Contacts</h2>
+                        <h2 class="title footer--title">Contacts</h2>
                         <div class="footer__social">
                             <a href="javascript: void(0);" title="" class="footer__link"><img class="linkedin"
                                     src="images/svg/ic-linkedin-white.svg" title="" alt=""></a>
@@ -209,7 +212,7 @@
                                     src="images/svg/ic-instagram-white.svg" title="" alt=""></a>
                         </div>
                     </div>
-                    <p class="footer__description">Our head office is located in Norway.
+                    <p class="medium-text footer--description">Our head office is located in Norway.
                         Research and development center is located in Belarus.</p>
                     <div class="footer__cities">
                         <div class="footer__city">
