9.bugFix add adaptive favicons, add preload in head, add basic font and background to body

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Author: A.Y. Yumanov, Length: 1 page">
     <title>Frontbyte</title>
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
-    <link rel="preload" href="css/fonts.css">
-    <link rel="preload" href="css/reset.css">
-    <link rel="preload" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16.png">
+    <link rel="manifest" href="images/favicon//site.webmanifest">
+    <link rel="mask-icon" href="images/favicon//safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="images/favicon//mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="preload" href="css/fonts.css" as="style">
+    <link rel="preload" href="css/reset.css" as="style">
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -135,7 +143,7 @@
                         </a>
                     </article>
                     <article class="work__card">
-                        <a href="javascript: void(0);" title="">
+                        <a href="javascript: void(0);" title="Kongsberg Group">
                             <img class="work__image" src="images/content-images/img-kongsberg.jpg" alt="">
                             <h3 class="work__article-title">Kongsberg Group</h3>
                             <p class="subtitle-text subtitle-text--article-description">Groundbreaking defence and
@@ -167,7 +175,7 @@
                     </div>
                 </header>
                 <article class="inside__card">
-                    <a href="javascripti: void(0);" title="" class="">
+                    <a href="javascript: void(0);" title="" class="">
                         <h3 class="inside__card-title">Press about us</h3>
                         <p class="subtitle-text subtitle-text--inside-description cropped">AR golf platform BirdieEyes
                             raises $300
@@ -222,11 +230,11 @@
                     <h2 class="title footer--title">Contacts</h2>
                     <div class="footer__social">
                         <a href="javascript: void(0);" title="LinkedIn" class="footer__link"><img class="linkedin"
-                                src="images/svg/ic-linkedin-white.svg" title="" alt=""></a>
+                                src="images/svg/ic-linkedin-white.svg" title="" alt="LinkedIn"></a>
                         <a href="javascript: void(0);" title="Facebook" class="footer__link"><img class="facebook"
-                                src="images/svg/ic-facebook-white.svg" title="" alt=""></a>
+                                src="images/svg/ic-facebook-white.svg" title="" alt="Facebook"></a>
                         <a href="javascript: void(0);" title="Instagram" class="footer__link"><img class="instagram"
-                                src="images/svg/ic-instagram-white.svg" title="" alt=""></a>
+                                src="images/svg/ic-instagram-white.svg" title="" alt="Instagram"></a>
                     </div>
                 </div>
                 <p class="main-text footer--description">Our head office is located in Norway.
