9.bugFix add line-clamb on inside-title, add mb for footer-city

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </header>
                 <div class="work__cards">
                     <article class="work__card work__card--main">
-                        <a class="b-link" href="javascript: void(0);" title="BirdieEyes">
+                        <a class="b-link b-link--work" href="javascript: void(0);" title="BirdieEyes">
                             <picture class="work__background-image">
                                 <source srcset="images/content-images/vid-birdieeyes-1.webp" type="image/webp">
                                 <source srcset="images/content-images/vid-birdieeyes.jpg" type="image/jpg">
@@ -223,7 +223,7 @@
                 </header>
                 <article class="inside__card">
                     <a class="b-link" href="javascript: void(0);" title="">
-                        <h3 class="inside__card-title">Press about us</h3>
+                        <h3 class="inside__card-title cropped">Press about us</h3>
                         <p class="subtitle-text subtitle-text--inside-description cropped">AR golf platform BirdieEyes
                             raises $300
                             million at
